# table-extraction

./: .gitignore  README.md  pyproject.toml
script/: datagen.sh  download_data.sh  setup.sh
table-detection/: pyproject.toml
table-detection/table_detection/: __init__.py  model.py
table-recognition/: pyproject.toml
table-recognition/table_recognition/: __init__.py  model.py
table_extraction/: __init__.py  pipeline.py
table_extraction/table_detection/: model.py
table_extraction/text_detection/: __init__.py  model.py
table_extraction/text_recognition/: __init__.py
table_extraction/text_recognition/config/: __init__.py  config.py
table_extraction/text_recognition/datamodule/: datamodule.py
table_extraction/text_recognition/inference/: pipeline.py
table_extraction/text_recognition/model/: model.py  swin.py  vit.py
table_extraction/text_recognition/tokenizer/: tokenizer.py
table_extraction/text_recognition/train/: __main__.py
table_extraction/text_recognition/util/: parser.py
text-detection/: pyproject.toml
text-detection/text_detection/: model.py
text-recognition/: pyproject.toml
text-recognition/text_recognition/config/: config.py  swin_config.py  vit_config.py
text-recognition/text_recognition/datamodule/: __init__.py  datamodule.py  transform.py
text-recognition/text_recognition/model/: __init__.py  model.py  swin.py
text-recognition/text_recognition/tokenizer/: tokenizer.py
text-recognition/text_recognition/train/: __main__.py
text-recognition/text_recognition/util/: __init__.py  callback.py  parser.py
