[tool.poetry]
name = "text-recognition"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
lightning = "^2.2.1"
torchvision = "^0.17.2"
wandb = "^0.16.5"
albumentations = "^1.4.2"
einops = "^0.7.0"
opencv-python = "^4.9.0.80"
transformers = "^4.39.2"
sentencepiece = "^0.2.0"
tokenizers = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
