[tool.poetry]
name = "text-recognition"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
lightning = "*"
torchvision = "*"
wandb = "^0.16.5"
albumentations = "^1.4.2"
einops = "^0.7.0"
opencv-python = "^4.9.0.80"
transformers = "^4.39.2"
sentencepiece = "^0.2.0"
tokenizers = "^0.15.2"
imagesize = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
